[gd_scene load_steps=9 format=2]

[ext_resource path="res://tscn/main_tscn/main.gd" type="Script" id=1]
[ext_resource path="res://tscn/gem_tscn/gem.tscn" type="PackedScene" id=2]
[ext_resource path="res://tscn/player_tscn/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://tscn/main_tscn/HUD.gd" type="Script" id=4]
[ext_resource path="res://Kenney Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://audio/Hit.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )
gem = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 196.632, 272.237 )

[node name="gemcontainer" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblscore" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="lbltimer" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="lbllevel" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="lblgameover" type="Label" parent="HUD"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = 234.257
margin_right = 1.0
margin_bottom = 304.257
custom_fonts/font = SubResource( 2 )
text = "Game Over!"
align = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="hurtaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="cherryTimer" type="Timer" parent="."]
[connection signal="body_entered" from="player" to="player" method="_on_player_body_entered"]
[connection signal="hurt" from="player" to="." method="_on_player_hurt"]
[connection signal="picked" from="player" to="." method="_on_player_picked"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="cherryTimer" to="." method="_on_cherryTimer_timeout"]
